--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,256 @@
-numpy==1.25.1
-streamlit==1.22.0
-streamlit-option-menu==0.3.6
-seaborn==0.12.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==4.2.2
+anyio==3.6.2
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.7.2
+asttokens==2.2.1
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.2.0
+Automat==22.10.0
+autoviz==0.1.730
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+blinker==1.6.2
+bokeh==2.4.3
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+colorcet==3.0.1
+colorlog==6.7.0
+comm==0.1.2
+constantly==15.1.0
+contourpy==1.0.7
+cryptography==41.0.1
+cssselect==1.2.0
+cycler==0.11.0
+dalex==1.6.0
+debugpy==1.6.5
+decorator==5.1.1
+defusedxml==0.7.1
+emoji==2.6.0
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.1
+executing==1.2.0
+fake-useragent==1.1.3
+fastjsonschema==2.16.2
+filelock==3.12.2
+Flask==2.3.2
+flatbuffers==23.3.3
+fonttools==4.38.0
+fqdn==1.5.1
+frozenlist==1.3.3
+fsspec==2023.6.0
+gitdb==4.0.10
+GitPython==3.1.31
+google==3.0.0
+google-api-core==2.11.0
+google-api-python-client==2.79.0
+google-auth==2.16.1
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.58.0
+greenlet==2.0.2
+h11==0.14.0
+holoviews==1.14.9
+httpcore==0.17.2
+httplib2==0.21.0
+httptools==0.6.0
+httpx==0.24.1
+hvplot==0.7.3
+hyperlink==21.0.0
+idna==3.4
+imbalanced-learn==0.10.1
+imblearn==0.0
+importlib-metadata==6.6.0
+incremental==22.10.0
+ipykernel==6.20.1
+ipython==8.8.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.7
+isoduration==20.11.0
+itemadapter==0.8.0
+itemloaders==1.1.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.2.0
+jsonpatch==1.33
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==7.4.8
+jupyter_core==5.1.3
+jupyter_server==2.3.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.8
+kaggle==1.5.15
+keras==2.12.0
+kiwisolver==1.4.4
+libclang==16.0.0
+lightgbm==3.3.5
+lxml==4.9.2
+Markdown==3.4.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
 matplotlib==3.7.0
-plotly==5.13.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.5
+multidict==6.0.4
+mypy-extensions==1.0.0
+mysql-connector-python==8.0.32
+nbclassic==0.5.2
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+nltk==3.8.1
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.25.1
+oauthlib==3.2.2
+openai==0.26.5
+openpyxl==3.1.2
+outcome==1.2.0
+packaging==23.0
 pandas==1.5.3
 pandas-dq==1.28
+pandasql==0.7.3
+pandocfilters==1.5.0
+panel==0.14.4
+param==1.13.0
+parse==1.19.1
+parsel==1.8.1
+parso==0.8.3
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.4.0
+pipdeptree==2.10.0
+platformdirs==2.6.2
+plotly==5.13.1
+prometheus-client==0.16.0
+prompt-toolkit==3.0.36
+Protego==0.2.1
+protobuf==3.20.3
+psutil==5.9.4
+pure-eval==0.2.2
+pyamg==5.0.1
+pyarrow==12.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyct==0.5.0
+pydeck==0.8.1b0
+PyDispatcher==2.0.7
+pyee==8.2.2
+Pygments==2.14.0
+Pympler==1.0.1
+pyOpenSSL==23.2.0
+pyparsing==3.0.9
+pyppeteer==1.0.2
+pyquery==2.0.0
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+python-slugify==8.0.1
+pytz==2022.7.1
+pyviz-comms==2.3.2
+pywin32==305
+pywinpty==2.0.10
+PyYAML==6.0
+pyzmq==24.0.1
+qtconsole==5.4.3
+QtPy==2.3.1
+queuelib==1.6.2
+reactpy==1.0.2
+regex==2023.6.3
+requests==2.28.2
+requests-file==1.5.1
+requests-html==0.10.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.3.5
+rsa==4.9
+scikit-learn==1.1.3
+scipy==1.10.1
+Scrapy==2.9.0
+seaborn==0.12.2
+selectolax==0.3.14
+selenium==4.10.0
+Send2Trash==1.8.0
+service-identity==23.1.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4
+SQLAlchemy==2.0.3
+stack-data==0.6.2
+starlette==0.28.0
+statsmodels==0.13.5
+streamlit==1.22.0
+streamlit-option-menu==0.3.6
+tenacity==8.2.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.2.0
+terminado==0.17.1
+text-unidecode==1.3
+textblob==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tldextract==3.4.4
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.8.1
+trio==0.22.0
+trio-websocket==0.10.3
+Twisted==22.10.0
+twisted-iocpsupport==1.0.3
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==5.0.1
+uri-template==1.2.0
+uritemplate==4.1.1
+urllib3==1.26.14
+uvicorn==0.22.0
+validators==0.20.0
+w3lib==2.1.1
+watchdog==3.0.0
+watchfiles==0.19.0
+wcwidth==0.2.5
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==10.4
+Werkzeug==2.3.6
+widgetsnbextension==4.0.8
+wordcloud==1.9.2
+wrapt==1.14.1
+wsproto==1.2.0
+xgboost==1.7.4
+xlrd==2.0.1
+yarl==1.8.2
+zipp==3.15.0
+zope.interface==6.0
 scikit-learn
